--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -7,3 +7,36 @@ body {
   justify-self: center;
   align-items: center;
 }
+
+.pink {
+  color: #FAE4E4;
+}
+
+body {
+  overflow-x: hidden;
+  margin: 0px;
+  padding: 0px;
+  width: 100vw;
+}
+
+
+body::-webkit-scrollbar {
+  width: 10px;
+}
+
+body::-webkit-scrollbar-track {
+  background: #FAE4E4;
+  border-radius: 8px;
+}
+
+/* The handle (thumb you drag) */
+body::-webkit-scrollbar-thumb {
+  background: #EBC2C2;
+  border-radius: 8px;
+}
+
+/* Handle on hover */
+body::-webkit-scrollbar-thumb:hover {
+  background: #EABCBC;
+}
+
